# Tsar_anti-fraud

./: .gitignore  App.js  README.md  app.json  build-log-1.txt  build-log-2.txt  build-log-3.txt  build-log-4.txt  eas.json  local.properties  package-lock.json  package.json  Царь Щит v 5.1 Эталон.txt
android/: gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/tsar/shield/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/drawable/: overlay_background.xml  phrase_background.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  call_screening_service.xml  file_paths.xml
app/schemas/com.tsarshield.data.database.AppDatabase/: 2.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/tsar/shield/: CHECK_FILE.kt  SecurityCore.kt  TsarShieldApplication.kt
app/src/main/java/com/tsar/shield/service/: AccessibilityService.kt  CallScreeningService.kt  STTService.kt
app/src/main/java/com/tsar/shield/ui/: MainActivity.kt  OverlayService.kt
app/src/main/java/com/tsarshield/: TsarShieldApplication.kt
app/src/main/java/com/tsarshield/di/: NetworkModule.kt
app/src/main/java/com/tsarshield/ui/: MainActivity.kt
app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
(+36 files in other folders)
